# ecobici-tfm

./: .gitignore  pyproject.toml
src/etl/: run_pipeline.py
src/etl/enricher/: enricher.py
src/etl/enricher/gbfs/: gbfs_enricher.py  gbfs_holiday_enricher.py  lags_enricher.py  time_enricher.py  weather_enricher.py
src/etl/enricher/stations/: cluster_enricher.py  ids_enricher.py  poi_enricher.py  station_activity_enricher.py  station_enricher.py  transit_enricher.py  utm_enricher.py
src/etl/enricher/trips/: holiday_enricher.py
src/etl/gbfs/: 0_clean.py  0b_fix_timezone.py  1_gbfs_resample.py  2_gbfs_enrich.py  3_train_data.py
src/etl/meteo/: 0a_generate_grid_1km.py  0b_generate_grid_2km.py  1a_download_1km_2025.py  1b_download_1km_2010_2025.py  1c_download_2km_2010_2025.py  2a_grid_to_station_1km.py  2b_grid_to_station_1km_mean.py  2c_grid_to_station_2km.py
src/etl/stations/: 0_extract_active_stations.py  1_enrich.py  2_trips_features.py
src/etl/trips/: 0_clean.py  1_enrich.py
src/modeler/: 0_naive_persistence.ipynb  1_linear_regression.ipynb  2_xgboost.ipynb  3_lstm.ipynb  4_model_comparison.ipynb  utils.py
src/modeler/output/0_persistence/: metrics.csv
src/modeler/output/1_linear_regression/: coefficients_20min.csv  coefficients_40min.csv  coefficients_60min.csv  metrics.csv
src/modeler/output/2_xgboost/: feature_importance_20min.csv  feature_importance_40min.csv  feature_importance_60min.csv  metrics.csv
src/modeler/output/3_lstm/: metrics.csv
